<resources>
    <string name="app_name">Just_Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="actual_quantity" translatable="false">0</string>
    <string name="summary">Order Summary</string>
    <string name="price">0</string>
    <string name="order">Order</string>

    <!-- Strings for the order summary text view -->
    <string name="orderFor">name</string>
    <string name="orderName">Name: </string>
    <string name="orderQuantity">\nQuantity: </string>
    <string name="addWhippedCream">\nAdd Whipped Cream? </string>
    <string name="addChocolate">\nAdd Chocolate? </string>
    <string name="total">\nTotal: </string>
    <string name="thankYou">\nThank You!</string>
</resources>
