<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_input"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings"
            style="@style/HeaderStyleText"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:paddingStart="24dp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:paddingStart="24dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            style="@style/HeaderStyleText"
            android:layout_marginStart="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp">


            <Button
                android:id="@+id/button4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="@string/minus"
                android:visibility="visible"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/actual_quantity"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="@string/plus"
                android:visibility="visible"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/summary"
            style="@style/HeaderStyleText"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:visibility="visible"
            android:layout_marginStart="16dp" />
    </LinearLayout>

</ScrollView>